added an option to preview pane mode in which we don't auto-preview
the selected message.  hitting space or enter now previews the messages.
also added an option not to automatically select the first unread message.
these options are useful for situations in which a person doesn't want a
new message read automatically on folder load.

added keybindings for lots of stuff, including searches, printing, selecting
the next unread message, etc.  added a page showing the keybindings, 
available through the help menu or by pressing Alt-K.

fixed the keybindings on top-level message frames.  those should work now.

selecting a NewMessageWindow now selects either the to: field, the subject:
field, or the text body, depending on which ones are filled out.

changed the display algorithm so that several messages are loaded
before the folder window itself is shown.

made it so exiting pooka before all the messages are loaded doesn't result
in a bunch of exceptions.

improved the startup time, so that open folders show up more quickly.

fixed the popup menu on the attachment pane so that it shows up in the
right place (and isn't selected by default when you right click and 
release).  fixed a similar problem with the nodes in the Folder Tree.

fixed the keybindings in preview pane mode.

020429 release
--------------

fixed a NPE that could happen when switching from preview pane mode to
desktop pane mode.

fixed some minor bugs involving detaching windows.

fixed the theme support so that the default theme is actually used for
just about everything.

fixed a bug where finding the first unread message was done on the 
awt event thread instead of the FolderThread.

fixed pooka so that the default image and text viewers that come with
javamail will actually work when you double click on an attachment.

preview pane mode now gives a resonable size for the message table.

nested subfolders were not being cached when in disconnected imap mode.
