@@ -1,3 +1,7 @@
+changed the sorting method on the message tables.  now clicking a column
+a second time will reverse the sort on that column.  doing a shift+click
+will still explicitly do a reverse sort.
+
 added an option to preview pane mode in which we don't auto-preview
 the selected message.  hitting space or enter now previews the messages.
 also added an option not to automatically select the first unread message.
